# gh-actions-demo

./: .actrc  .gitignore  .gitleaksignore  .megalinter.yaml  .mise.toml  .php-cs-fixer.dist.php  .pre-commit-config.yaml  .prettierrc.yaml  .trivyignore  Dockerfile  Dockerfile.python  README.md  Taskfile.yaml  Testfile.yaml  cypress.config.ts  index.html  package-lock.json  package.json  pyproject.toml  satis.json  shell.nix  tsconfig.json
.github/: actionlint.yaml  renovate-bot.json5  renovate.json5
.github/workflows/: auto-pr.yaml  auto-rc-tag.yaml  build-dispatch.yaml  create-release.yaml  cypress.yaml  dispatch.yaml  docker-build-push-tag.yaml  docker-build-push.yaml  docker-build.yaml  docker-publish.yaml  flux-diff.yaml  get-changed-files.yaml  mega-linter.yaml  multi-env-dispatch.yaml  multi-tag-update.yaml  npm-version-bump.yaml  (+12 more)
.renovate/: automerge-major.json5  automerge-schedule.json5  automerge.json5
.taskfiles/: flux.yaml  pre-commit.yaml  workflows.yaml
app-one/: Dockerfile
app-python/: Dockerfile
app-tag/: Dockerfile  index.html
app-two/: Dockerfile  index.html
cypress/: Dockerfile
monorepo-app-a/: package-lock.json  package.json
monorepo-app-b/: package-lock.json  package.json
monorepo-app-c/: package-lock.json  package.json
output/: index.html
postgres-db-init/: Dockerfile
shared/: README.md
src/: index.ts
tag-update/: test-renovate.yaml  testfile.yaml  testfile2.yaml  testimage.yaml
terraform/: images.yaml  main.tf  version.yaml
test-php/: .php-cs-fixer.dist.php  test.php
versions/: integration.yaml  staging.yaml
(+51 files in other folders)
