[tool.poetry]
name = "test"
version = "0.1.0"
description = "Test"
readme = "README.md"
authors = [
    "Max Mustermann <max@example.io>"
]
package-mode = false

[tool.poetry.dependencies]
python = "3.13.1"
fastapi = "0.115.7"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
duckdb = "1.1.3"

[tool.poetry.group.lsp-dev]
optional = true

[tool.poetry.group.lsp-dev.dependencies]
ruff-lsp = "0.0.60"
